docs/api/qiskit/0.19/aer_extensions.md
---
title: extensions
description: API reference for qiskit.providers.aer.extensions
in_page_toc_min_heading_level: 1
python_api_type: module
python_api_name: qiskit.providers.aer.extensions
---

<span id="module-qiskit.providers.aer.extensions" />

<span id="aer-circuit-extensions" />

# Circuit Extensions

<span id="module-qiskit.providers.aer.extensions" />

`qiskit.providers.aer.extensions¶`

## Snapshots

<span id="module-qiskit.providers.aer.extensions" />

`¶`

Snapshot instructions allow taking a snapshot of the current state of the simulator without effecting the outcome of the simulation. These can be used with the QasmSimulator backend to return the expectation value of an operator or the probability of measurement outcomes.

|                                                                                                                                                                    |                                                                   |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------- |
| [`Snapshot`](qiskit.providers.aer.extensions.Snapshot "qiskit.providers.aer.extensions.Snapshot")(label\[, snapshot\_type, num\_qubits, …])                        | Simulator snapshot instruction.                                   |
| [`SnapshotProbabilities`](qiskit.providers.aer.extensions.SnapshotProbabilities "qiskit.providers.aer.extensions.SnapshotProbabilities")(label, num\_qubits\[, …]) | Snapshot instruction for all methods of Qasm simulator.           |
| [`SnapshotExpectationValue`](qiskit.providers.aer.extensions.SnapshotExpectationValue "qiskit.providers.aer.extensions.SnapshotExpectationValue")(label, op\[, …]) | Snapshot instruction for supported methods of Qasm simulator.     |
| [`SnapshotStatevector`](qiskit.providers.aer.extensions.SnapshotStatevector "qiskit.providers.aer.extensions.SnapshotStatevector")(label\[, num\_qubits])          | Snapshot instruction for statevector snapshot type                |
| [`SnapshotDensityMatrix`](qiskit.providers.aer.extensions.SnapshotDensityMatrix "qiskit.providers.aer.extensions.SnapshotDensityMatrix")(label, num\_qubits)       | Snapshot instruction for density matrix method of Qasm simulator. |
| [`SnapshotStabilizer`](qiskit.providers.aer.extensions.SnapshotStabilizer "qiskit.providers.aer.extensions.SnapshotStabilizer")(label\[, num\_qubits])             | Snapshot instruction for stabilizer method of Qasm simulator.     |

